Fixed links container size and flex wrapping on larger screens.

--- a/style.css
+++ b/style.css
@@ -229,7 +229,10 @@ p {
 
   .links {
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-evenly;
+    max-width: 650px;
+    row-gap: 25px;
     width: 100%;
   }
 
